syntax = "proto3";
package pb.network.protocol;

option go_package = "github.com/weisyn/v1/pb/network/protocol";

/**
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 * ğŸ§ª WESæµ‹è¯•ç½‘ç»œç®¡ç†åè®® - å†…éƒ¨å¼€å‘ä¸“ç”¨
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 *
 * æœ¬åè®®å®šä¹‰WESç³»ç»Ÿä¸­æµ‹è¯•ç½‘ç»œç®¡ç†çš„å†…éƒ¨æ¶ˆæ¯æ ¼å¼ï¼Œä¸“é—¨ç”¨äºå¼€å‘é˜¶æ®µçš„ç½‘ç»œæ¸…ç†ã€
 * é‡ç½®å’Œä¸€è‡´æ€§ç®¡ç†ã€‚è¿™äº›åè®®ä¸å¯¹å¤–æš´éœ²ï¼Œä»…ä¾›é¡¹ç›®æ–¹å†…éƒ¨ä½¿ç”¨ã€‚
 *
 * ğŸ¯ æ ¸å¿ƒåŠŸèƒ½ï¼š
 * â€¢ æµ‹è¯•ç½‘ç»œé‡ç½®ï¼šåè°ƒå…¨ç½‘èŠ‚ç‚¹è¿›è¡Œæ•°æ®æ¸…ç†å’Œé‡ç½®
 * â€¢ æ•°æ®ä¸€è‡´æ€§æ£€æŸ¥ï¼šè¯†åˆ«å’Œä¿®å¤ç½‘ç»œä¸­çš„æ•°æ®ä¸ä¸€è‡´
 * â€¢ ç½‘ç»œå¥åº·ç›‘æ§ï¼šæä¾›ç½‘ç»œçŠ¶æ€å’Œæ€§èƒ½æŒ‡æ ‡
 * â€¢ ä¼šè¯ç®¡ç†ï¼šæ”¯æŒç‹¬ç«‹çš„æµ‹è¯•ä¼šè¯å’ŒçŠ¶æ€éš”ç¦»
 *
 * ğŸ“¡ åè®®æ˜ å°„ï¼š
 * â€¢ ç½‘ç»œé‡ç½®å¹¿æ’­ï¼š/weisyn/internal/test_reset/1.0.0 (Stream RPC)
 * â€¢ ä¸€è‡´æ€§æ£€æŸ¥ï¼š/weisyn/internal/consistency_check/1.0.0 (Request-Response)
 * â€¢ å¥åº·æ£€æŸ¥ï¼š/weisyn/internal/health_check/1.0.0 (Request-Response)
 * â€¢ ä¼šè¯åè°ƒï¼šweisyn.internal.test_session.v1 (GossipSub Topic)
 *
 * ğŸ›¡ï¸ å®‰å…¨æ³¨æ„ï¼š
 * â€¢ ä»…é™å†…éƒ¨ç½‘ç»œä½¿ç”¨ï¼Œä¸åº”æš´éœ²ç»™å¤–éƒ¨
 * â€¢ åŒ…å«ç®¡ç†å‘˜ç­¾åéªŒè¯æœºåˆ¶
 * â€¢ æ”¯æŒä¼šè¯éš”ç¦»å’Œæƒé™æ§åˆ¶
 * â€¢ å…·å¤‡å®¡è®¡æ—¥å¿—å’Œæ“ä½œè®°å½•
 *
 * ğŸ”„ å…¸å‹æµç¨‹ï¼š
 * 1. å¼€å‘è€…è§¦å‘é‡ç½® â†’ ç”Ÿæˆé‡ç½®æ¶ˆæ¯ â†’ å¹¿æ’­åˆ°ç½‘ç»œèŠ‚ç‚¹
 * 2. å„èŠ‚ç‚¹æ¥æ”¶é‡ç½®æ¶ˆæ¯ â†’ éªŒè¯æƒé™ â†’ æ‰§è¡Œæœ¬åœ°æ¸…ç†
 * 3. æ¸…ç†å®Œæˆ â†’ é‡æ–°åŠ å…¥ç½‘ç»œ â†’ æŠ¥å‘ŠçŠ¶æ€
 * 4. åè°ƒè€…ç¡®è®¤å…¨ç½‘é‡ç½® â†’ å¯åŠ¨æ–°æµ‹è¯•ä¼šè¯
 * â–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆâ–ˆ
 */

// ================================================================
//                        æµ‹è¯•ç½‘ç»œé‡ç½®åè®®
// ================================================================

// TestNetworkResetMessage æµ‹è¯•ç½‘ç»œé‡ç½®æ¶ˆæ¯
// ç”¨äºåè°ƒå…¨ç½‘èŠ‚ç‚¹æ‰§è¡Œæ•°æ®æ¸…ç†å’Œé‡ç½®æ“ä½œ
message TestNetworkResetMessage {
    // é‡ç½®æ ‡è¯†å’ŒåŸºæœ¬ä¿¡æ¯
    string reset_id = 1;           // å”¯ä¸€é‡ç½®æ ‡è¯†ç¬¦ï¼ˆå¦‚ï¼šreset-20241201-001ï¼‰
    uint64 reset_height = 2;       // é‡ç½®åˆ°çš„åŒºå—é«˜åº¦ï¼ˆ0=å®Œå…¨é‡ç½®ï¼‰
    string reset_reason = 3;       // é‡ç½®åŸå› æè¿°
    uint64 timestamp = 4;          // é‡ç½®æ—¶é—´æˆ³ï¼ˆUnixæ—¶é—´ï¼‰
    
    // é‡ç½®é€‰é¡¹å’Œæ§åˆ¶
    bool force_reset = 5;          // å¼ºåˆ¶é‡ç½®æ ‡å¿—
    bool keep_config = 6;          // ä¿ç•™é…ç½®æ–‡ä»¶æ ‡å¿—
    bool backup_before_reset = 7;  // é‡ç½®å‰å¤‡ä»½æ ‡å¿—
    repeated string exclude_patterns = 8; // æ’é™¤çš„æ•°æ®æ¨¡å¼
    
    // æƒé™å’ŒéªŒè¯
    string source_peer_id = 9;     // å‘èµ·é‡ç½®çš„èŠ‚ç‚¹ID
    bytes admin_signature = 10;    // ç®¡ç†å‘˜æ•°å­—ç­¾å
    string session_token = 11;     // ä¼šè¯ä»¤ç‰Œ
    
    // åè°ƒå’ŒåŒæ­¥
    uint32 reset_sequence = 12;    // é‡ç½®åºå·ï¼ˆé˜²é‡æ”¾ï¼‰
    uint64 coordination_timeout = 13; // åè°ƒè¶…æ—¶æ—¶é—´ï¼ˆç§’ï¼‰
    bool require_confirmation = 14; // æ˜¯å¦éœ€è¦ç¡®è®¤å“åº”
}

// TestNetworkResetResponse æµ‹è¯•ç½‘ç»œé‡ç½®å“åº”
// èŠ‚ç‚¹å¯¹é‡ç½®æ¶ˆæ¯çš„å“åº”ç¡®è®¤
message TestNetworkResetResponse {
    string reset_id = 1;           // å¯¹åº”çš„é‡ç½®ID
    string responding_peer_id = 2; // å“åº”èŠ‚ç‚¹ID
    ResetStatus status = 3;        // é‡ç½®çŠ¶æ€
    string message = 4;            // çŠ¶æ€æ¶ˆæ¯
    uint64 response_timestamp = 5; // å“åº”æ—¶é—´æˆ³
    
    // é‡ç½®ç»“æœè¯¦æƒ…
    ResetExecutionResult execution_result = 6; // æ‰§è¡Œç»“æœ
    uint64 cleanup_duration_ms = 7;           // æ¸…ç†è€—æ—¶ï¼ˆæ¯«ç§’ï¼‰
    repeated string cleaned_paths = 8;        // å·²æ¸…ç†çš„è·¯å¾„
    repeated string error_messages = 9;       // é”™è¯¯ä¿¡æ¯åˆ—è¡¨
}

// ResetStatus é‡ç½®çŠ¶æ€æšä¸¾
enum ResetStatus {
    RESET_STATUS_UNKNOWN = 0;      // æœªçŸ¥çŠ¶æ€
    RESET_STATUS_ACCEPTED = 1;     // å·²æ¥å—é‡ç½®è¯·æ±‚
    RESET_STATUS_IN_PROGRESS = 2;  // é‡ç½®è¿›è¡Œä¸­
    RESET_STATUS_COMPLETED = 3;    // é‡ç½®å®Œæˆ
    RESET_STATUS_FAILED = 4;       // é‡ç½®å¤±è´¥
    RESET_STATUS_REJECTED = 5;     // é‡ç½®è¢«æ‹’ç»
    RESET_STATUS_TIMEOUT = 6;      // é‡ç½®è¶…æ—¶
}

// ResetExecutionResult é‡ç½®æ‰§è¡Œç»“æœ
message ResetExecutionResult {
    bool success = 1;              // æ˜¯å¦æˆåŠŸ
    uint64 blocks_removed = 2;     // åˆ é™¤çš„åŒºå—æ•°
    uint64 data_size_freed = 3;    // é‡Šæ”¾çš„æ•°æ®å¤§å°ï¼ˆå­—èŠ‚ï¼‰
    string backup_path = 4;        // å¤‡ä»½è·¯å¾„ï¼ˆå¦‚æœåˆ›å»ºäº†å¤‡ä»½ï¼‰
    bool network_reconnected = 5;  // æ˜¯å¦é‡æ–°è¿æ¥ç½‘ç»œ
}

// ================================================================
//                        ç½‘ç»œä¸€è‡´æ€§æ£€æŸ¥åè®®
// ================================================================

// NetworkConsistencyCheckRequest ç½‘ç»œä¸€è‡´æ€§æ£€æŸ¥è¯·æ±‚
message NetworkConsistencyCheckRequest {
    string check_id = 1;           // æ£€æŸ¥ID
    string requester_peer_id = 2;  // è¯·æ±‚è€…èŠ‚ç‚¹ID
    uint32 check_depth = 3;        // æ£€æŸ¥æ·±åº¦ï¼ˆåŒºå—æ•°ï¼‰
    uint64 base_height = 4;        // åŸºå‡†é«˜åº¦
    repeated string target_peer_ids = 5; // ç›®æ ‡æ£€æŸ¥èŠ‚ç‚¹ï¼ˆç©º=æ‰€æœ‰èŠ‚ç‚¹ï¼‰
    uint64 check_timeout = 6;      // æ£€æŸ¥è¶…æ—¶æ—¶é—´
    bool include_block_hashes = 7; // æ˜¯å¦åŒ…å«åŒºå—å“ˆå¸Œ
}

// NetworkConsistencyCheckResponse ç½‘ç»œä¸€è‡´æ€§æ£€æŸ¥å“åº”
message NetworkConsistencyCheckResponse {
    string check_id = 1;           // å¯¹åº”çš„æ£€æŸ¥ID
    string responding_peer_id = 2; // å“åº”èŠ‚ç‚¹ID
    NodeConsistencyState node_state = 3; // èŠ‚ç‚¹çŠ¶æ€
    uint64 response_timestamp = 4; // å“åº”æ—¶é—´æˆ³
}

// NodeConsistencyState èŠ‚ç‚¹ä¸€è‡´æ€§çŠ¶æ€
message NodeConsistencyState {
    string peer_id = 1;            // èŠ‚ç‚¹ID
    uint64 current_height = 2;     // å½“å‰åŒºå—é«˜åº¦
    string latest_block_hash = 3;  // æœ€æ–°åŒºå—å“ˆå¸Œ
    repeated BlockHashInfo block_hashes = 4; // åŒºå—å“ˆå¸Œåˆ—è¡¨
    NodeHealthStatus health_status = 5;      // å¥åº·çŠ¶æ€
    uint64 last_update_time = 6;   // æœ€åæ›´æ–°æ—¶é—´
    repeated string issues = 7;     // å‘ç°çš„é—®é¢˜
}

// BlockHashInfo åŒºå—å“ˆå¸Œä¿¡æ¯
message BlockHashInfo {
    uint64 height = 1;             // åŒºå—é«˜åº¦
    string block_hash = 2;         // åŒºå—å“ˆå¸Œ
    uint64 timestamp = 3;          // åŒºå—æ—¶é—´æˆ³
    uint32 transaction_count = 4;  // äº¤æ˜“æ•°é‡
}

// NodeHealthStatus èŠ‚ç‚¹å¥åº·çŠ¶æ€æšä¸¾
enum NodeHealthStatus {
    HEALTH_STATUS_UNKNOWN = 0;     // æœªçŸ¥çŠ¶æ€
    HEALTH_STATUS_HEALTHY = 1;     // å¥åº·
    HEALTH_STATUS_WARNING = 2;     // æœ‰è­¦å‘Š
    HEALTH_STATUS_ERROR = 3;       // æœ‰é”™è¯¯
    HEALTH_STATUS_CRITICAL = 4;    // ä¸¥é‡é—®é¢˜
    HEALTH_STATUS_OFFLINE = 5;     // ç¦»çº¿
}

// ================================================================
//                        æµ‹è¯•ä¼šè¯ç®¡ç†åè®®
// ================================================================

// TestSessionMessage æµ‹è¯•ä¼šè¯æ¶ˆæ¯
// ç”¨äºç®¡ç†ç‹¬ç«‹çš„æµ‹è¯•ä¼šè¯å’ŒçŠ¶æ€åŒæ­¥
message TestSessionMessage {
    SessionMessageType message_type = 1; // æ¶ˆæ¯ç±»å‹
    string session_id = 2;         // ä¼šè¯ID
    string source_peer_id = 3;     // æºèŠ‚ç‚¹ID
    uint64 timestamp = 4;          // æ—¶é—´æˆ³
    
    oneof content {
        SessionStartRequest session_start = 5;    // ä¼šè¯å¯åŠ¨è¯·æ±‚
        SessionJoinRequest session_join = 6;      // åŠ å…¥ä¼šè¯è¯·æ±‚
        SessionStatusUpdate session_status = 7;   // ä¼šè¯çŠ¶æ€æ›´æ–°
        SessionEndNotification session_end = 8;   // ä¼šè¯ç»“æŸé€šçŸ¥
    }
}

// SessionMessageType ä¼šè¯æ¶ˆæ¯ç±»å‹
enum SessionMessageType {
    SESSION_MESSAGE_UNKNOWN = 0;   // æœªçŸ¥æ¶ˆæ¯
    SESSION_MESSAGE_START = 1;     // å¯åŠ¨ä¼šè¯
    SESSION_MESSAGE_JOIN = 2;      // åŠ å…¥ä¼šè¯
    SESSION_MESSAGE_STATUS = 3;    // çŠ¶æ€æ›´æ–°
    SESSION_MESSAGE_END = 4;       // ç»“æŸä¼šè¯
    SESSION_MESSAGE_SYNC = 5;      // åŒæ­¥è¯·æ±‚
}

// SessionStartRequest ä¼šè¯å¯åŠ¨è¯·æ±‚
message SessionStartRequest {
    string session_name = 1;       // ä¼šè¯åç§°
    string description = 2;        // ä¼šè¯æè¿°
    bool clean_before_start = 3;   // å¯åŠ¨å‰æ¸…ç†
    repeated string participant_peer_ids = 4; // å‚ä¸è€…èŠ‚ç‚¹ID
    map<string, string> session_config = 5;   // ä¼šè¯é…ç½®
}

// SessionJoinRequest åŠ å…¥ä¼šè¯è¯·æ±‚
message SessionJoinRequest {
    string session_id = 1;         // è¦åŠ å…¥çš„ä¼šè¯ID
    string peer_id = 2;            // è¯·æ±‚åŠ å…¥çš„èŠ‚ç‚¹ID
    string join_reason = 3;        // åŠ å…¥åŸå› 
}

// SessionStatusUpdate ä¼šè¯çŠ¶æ€æ›´æ–°
message SessionStatusUpdate {
    string session_id = 1;         // ä¼šè¯ID
    SessionStatus status = 2;      // ä¼šè¯çŠ¶æ€
    map<string, string> status_data = 3; // çŠ¶æ€æ•°æ®
    repeated string active_peers = 4;     // æ´»è·ƒèŠ‚ç‚¹åˆ—è¡¨
}

// SessionEndNotification ä¼šè¯ç»“æŸé€šçŸ¥
message SessionEndNotification {
    string session_id = 1;         // ä¼šè¯ID
    string end_reason = 2;         // ç»“æŸåŸå› 
    bool success = 3;              // æ˜¯å¦æˆåŠŸ
    SessionReport session_report = 4; // ä¼šè¯æŠ¥å‘Š
}

// SessionStatus ä¼šè¯çŠ¶æ€æšä¸¾
enum SessionStatus {
    SESSION_STATUS_UNKNOWN = 0;    // æœªçŸ¥çŠ¶æ€
    SESSION_STATUS_STARTING = 1;   // å¯åŠ¨ä¸­
    SESSION_STATUS_ACTIVE = 2;     // æ´»è·ƒä¸­
    SESSION_STATUS_PAUSED = 3;     // å·²æš‚åœ
    SESSION_STATUS_ENDING = 4;     // ç»“æŸä¸­
    SESSION_STATUS_COMPLETED = 5;  // å·²å®Œæˆ
    SESSION_STATUS_FAILED = 6;     // å¤±è´¥
}

// SessionReport ä¼šè¯æŠ¥å‘Š
message SessionReport {
    string session_id = 1;         // ä¼šè¯ID
    uint64 start_time = 2;         // å¼€å§‹æ—¶é—´
    uint64 end_time = 3;           // ç»“æŸæ—¶é—´
    uint64 duration_seconds = 4;   // æŒç»­æ—¶é—´ï¼ˆç§’ï¼‰
    uint32 participant_count = 5;  // å‚ä¸è€…æ•°é‡
    repeated string achievements = 6; // å®Œæˆçš„ä»»åŠ¡
    repeated string issues = 7;    // é‡åˆ°çš„é—®é¢˜
    map<string, string> metrics = 8; // æŒ‡æ ‡æ•°æ®
}

// ================================================================
//                        ç½‘ç»œå¥åº·ç›‘æ§åè®®
// ================================================================

// NetworkHealthCheckRequest ç½‘ç»œå¥åº·æ£€æŸ¥è¯·æ±‚
message NetworkHealthCheckRequest {
    string check_id = 1;           // æ£€æŸ¥ID
    string requester_peer_id = 2;  // è¯·æ±‚è€…èŠ‚ç‚¹ID
    repeated HealthCheckType check_types = 3; // æ£€æŸ¥ç±»å‹
    uint64 check_timeout = 4;      // æ£€æŸ¥è¶…æ—¶
}

// NetworkHealthCheckResponse ç½‘ç»œå¥åº·æ£€æŸ¥å“åº”
message NetworkHealthCheckResponse {
    string check_id = 1;           // å¯¹åº”çš„æ£€æŸ¥ID
    string responding_peer_id = 2; // å“åº”èŠ‚ç‚¹ID
    NetworkHealthReport health_report = 3; // å¥åº·æŠ¥å‘Š
    uint64 response_timestamp = 4; // å“åº”æ—¶é—´æˆ³
}

// HealthCheckType å¥åº·æ£€æŸ¥ç±»å‹
enum HealthCheckType {
    HEALTH_CHECK_UNKNOWN = 0;      // æœªçŸ¥æ£€æŸ¥
    HEALTH_CHECK_NETWORK = 1;      // ç½‘ç»œè¿æ¥æ£€æŸ¥
    HEALTH_CHECK_BLOCKCHAIN = 2;   // åŒºå—é“¾çŠ¶æ€æ£€æŸ¥
    HEALTH_CHECK_STORAGE = 3;      // å­˜å‚¨çŠ¶æ€æ£€æŸ¥
    HEALTH_CHECK_PERFORMANCE = 4;  // æ€§èƒ½æŒ‡æ ‡æ£€æŸ¥
    HEALTH_CHECK_CONSENSUS = 5;    // å…±è¯†çŠ¶æ€æ£€æŸ¥
}

// NetworkHealthReport ç½‘ç»œå¥åº·æŠ¥å‘Š
message NetworkHealthReport {
    string peer_id = 1;            // èŠ‚ç‚¹ID
    NodeHealthStatus overall_status = 2;  // æ€»ä½“çŠ¶æ€
    repeated HealthCheckResult check_results = 3; // æ£€æŸ¥ç»“æœ
    NetworkMetrics network_metrics = 4;          // ç½‘ç»œæŒ‡æ ‡
    BlockchainMetrics blockchain_metrics = 5;    // åŒºå—é“¾æŒ‡æ ‡
    PerformanceMetrics performance_metrics = 6;  // æ€§èƒ½æŒ‡æ ‡
    uint64 report_timestamp = 7;   // æŠ¥å‘Šæ—¶é—´æˆ³
}

// HealthCheckResult å¥åº·æ£€æŸ¥ç»“æœ
message HealthCheckResult {
    HealthCheckType check_type = 1; // æ£€æŸ¥ç±»å‹
    bool passed = 2;               // æ˜¯å¦é€šè¿‡
    string message = 3;            // æ£€æŸ¥æ¶ˆæ¯
    double score = 4;              // è¯„åˆ†ï¼ˆ0-100ï¼‰
    map<string, string> details = 5; // è¯¦ç»†ä¿¡æ¯
}

// NetworkMetrics ç½‘ç»œæŒ‡æ ‡
message NetworkMetrics {
    uint32 connected_peers = 1;    // è¿æ¥çš„èŠ‚ç‚¹æ•°
    uint32 active_connections = 2; // æ´»è·ƒè¿æ¥æ•°
    double average_latency_ms = 3; // å¹³å‡å»¶è¿Ÿï¼ˆæ¯«ç§’ï¼‰
    uint64 bytes_sent = 4;         // å‘é€å­—èŠ‚æ•°
    uint64 bytes_received = 5;     // æ¥æ”¶å­—èŠ‚æ•°
    double message_throughput = 6;  // æ¶ˆæ¯ååé‡ï¼ˆmsg/sï¼‰
}

// BlockchainMetrics åŒºå—é“¾æŒ‡æ ‡
message BlockchainMetrics {
    uint64 current_height = 1;     // å½“å‰é«˜åº¦
    uint64 last_block_time = 2;    // æœ€ååŒºå—æ—¶é—´
    double average_block_time = 3; // å¹³å‡å‡ºå—æ—¶é—´
    uint32 pending_transactions = 4; // å¾…å¤„ç†äº¤æ˜“æ•°
    bool sync_status = 5;          // åŒæ­¥çŠ¶æ€
    double chain_progress = 6;     // é“¾åŒæ­¥è¿›åº¦ï¼ˆ0-100%ï¼‰
}

// PerformanceMetrics æ€§èƒ½æŒ‡æ ‡
message PerformanceMetrics {
    double cpu_usage_percent = 1;  // CPUä½¿ç”¨ç‡
    double memory_usage_percent = 2; // å†…å­˜ä½¿ç”¨ç‡
    uint64 disk_usage_bytes = 3;   // ç£ç›˜ä½¿ç”¨é‡
    double network_io_mbps = 4;    // ç½‘ç»œIOé€Ÿç‡
    uint32 goroutine_count = 5;    // åç¨‹æ•°é‡
    double gc_pause_ms = 6;        // GCæš‚åœæ—¶é—´
}
