package interactive

import (
	"context"
	"fmt"
	"strings"
	"time"

	"github.com/pterm/pterm"

	"github.com/weisyn/v1/internal/cli/client"
	"github.com/weisyn/v1/internal/cli/status"
	"github.com/weisyn/v1/internal/cli/ui"
	blockchainintf "github.com/weisyn/v1/pkg/interfaces/blockchain"
	"github.com/weisyn/v1/pkg/interfaces/config"
	consensusintf "github.com/weisyn/v1/pkg/interfaces/consensus"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"

	// Protobufå¯¼å…¥
	blockpb "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
)

// Dashboard å®æ—¶ä»ªè¡¨ç›˜
type Dashboard struct {
	logger         log.Logger
	apiClient      *client.Client
	uiComponents   ui.Components
	layout         *ui.DashboardLayout
	chainService   blockchainintf.ChainService   // ğŸ”— é“¾çŠ¶æ€æœåŠ¡
	accountService blockchainintf.AccountService // ğŸ“Š è´¦æˆ·æœåŠ¡
	minerService   consensusintf.MinerService    // â›ï¸ æŒ–çŸ¿æœåŠ¡
	configProvider config.Provider               // âš™ï¸ é…ç½®æä¾›è€…
	statusManager  *status.StatusManager         // ğŸ“Š çŠ¶æ€ç®¡ç†å™¨
	isRunning      bool
}

// NewDashboard åˆ›å»ºæ–°çš„ä»ªè¡¨ç›˜
func NewDashboard(
	logger log.Logger,
	apiClient *client.Client,
	uiComponents ui.Components,
	chainService blockchainintf.ChainService,
	accountService blockchainintf.AccountService,
	minerService consensusintf.MinerService,
	configProvider config.Provider,
	statusManager *status.StatusManager,
) *Dashboard {
	return &Dashboard{
		logger:         logger,
		apiClient:      apiClient,
		uiComponents:   uiComponents,
		layout:         ui.NewDashboardLayout(logger, apiClient, chainService, accountService, minerService, configProvider, statusManager),
		chainService:   chainService,
		accountService: accountService,
		minerService:   minerService,
		configProvider: configProvider,
		statusManager:  statusManager,
		isRunning:      false,
	}
}

// Start å¯åŠ¨ä»ªè¡¨ç›˜
func (d *Dashboard) Start(ctx context.Context) error {
	d.isRunning = true

	// å¯åŠ¨æ–°çš„è¡¨æ ¼å¸ƒå±€ä»ªè¡¨ç›˜
	if err := d.layout.Start(ctx); err != nil {
		d.logger.Errorf("å¯åŠ¨ä»ªè¡¨ç›˜å¸ƒå±€å¤±è´¥: %v", err)
		return err
	}

	// æ˜¾ç¤ºåˆå§‹çŠ¶æ€
	if err := d.showInitialStatus(ctx); err != nil {
		d.logger.Errorf("æ˜¾ç¤ºåˆå§‹çŠ¶æ€å¤±è´¥: %v", err)
		// ä¸è¿”å›é”™è¯¯ï¼Œç»§ç»­è¿è¡Œ
	}

	return nil
}

// Stop åœæ­¢ä»ªè¡¨ç›˜
func (d *Dashboard) Stop() {
	d.isRunning = false
	if d.layout != nil {
		d.layout.Stop()
	}
}

// AddLogEntry æ·»åŠ æ—¥å¿—æ¡ç›®åˆ°ä»ªè¡¨ç›˜
func (d *Dashboard) AddLogEntry(level, message string) {
	if d.layout != nil {
		d.layout.AddLogEntry(level, message)
	}
}

// SetSelectedMenu è®¾ç½®é€‰ä¸­çš„èœå•é¡¹
func (d *Dashboard) SetSelectedMenu(index int) {
	if d.layout != nil {
		d.layout.SetSelectedMenu(index)
	}
}

// GetSelectedMenu è·å–å½“å‰é€‰ä¸­çš„èœå•ç´¢å¼•
func (d *Dashboard) GetSelectedMenu() int {
	if d.layout != nil {
		return d.layout.GetSelectedMenu()
	}
	return 0
}

// showInitialStatus æ˜¾ç¤ºåˆå§‹çŠ¶æ€ä¿¡æ¯
func (d *Dashboard) showInitialStatus(ctx context.Context) error {
	pterm.DefaultSection.Println("ç³»ç»ŸçŠ¶æ€æ£€æŸ¥")

	// åˆ›å»ºè¿›åº¦æ¡
	progress := pterm.DefaultProgressbar.WithTotal(4).WithTitle("æ­£åœ¨åŠ è½½ç³»ç»Ÿä¿¡æ¯...")
	progress, _ = progress.Start()

	var nodeInfo *client.NodeInfo
	var miningStatus *client.MiningStatus
	var blockInfo *client.BlockInfo

	// ğŸš€ ä½¿ç”¨çœŸå®APIå’ŒæœåŠ¡è°ƒç”¨è·å–æ•°æ®

	// è·å–èŠ‚ç‚¹ä¿¡æ¯ - ä½¿ç”¨APIè°ƒç”¨
	progress.UpdateTitle("è·å–èŠ‚ç‚¹ä¿¡æ¯...")
	if info, err := d.apiClient.GetNodeInfo(ctx); err == nil {
		d.logger.Infof("âœ… è·å–åˆ°èŠ‚ç‚¹ä¿¡æ¯: ID=%s", info.NodeID)
		nodeInfo = info
	} else {
		d.logger.Warnf("âŒ è·å–èŠ‚ç‚¹ä¿¡æ¯å¤±è´¥: %v", err)
	}
	progress.Increment()

	// è·å–æŒ–çŸ¿çŠ¶æ€ - ä½¿ç”¨æŒ–çŸ¿æœåŠ¡
	progress.UpdateTitle("è·å–æŒ–çŸ¿çŠ¶æ€...")
	if isRunning, minerAddr, err := d.minerService.GetMiningStatus(ctx); err == nil {
		d.logger.Infof("âœ… è·å–åˆ°æŒ–çŸ¿çŠ¶æ€: è¿è¡Œ=%t", isRunning)
		miningStatus = &client.MiningStatus{
			IsMining:     isRunning,
			MinerAddress: string(minerAddr),
			IsActive:     isRunning,
			HashRate:     0,     // ä¸æ˜¾ç¤ºç®—åŠ›æŒ‡æ ‡ï¼ˆéµå¾ªé¡¹ç›®çº¦æŸï¼‰
			BlocksMined:  0,     // ä¸æ˜¾ç¤ºæŒ–çŸ¿åŒºå—æ•°
			Difficulty:   "N/A", // éš¾åº¦ä¿¡æ¯éœ€è¦ä»å…¶ä»–æºè·å–
			Uptime:       0,
		}
	} else {
		d.logger.Warnf("âŒ è·å–æŒ–çŸ¿çŠ¶æ€å¤±è´¥: %v", err)
	}
	progress.Increment()

	// ğŸš€ è·å–æœ€æ–°åŒºå— - ä½¿ç”¨APIè°ƒç”¨
	progress.UpdateTitle("è·å–åŒºå—ä¿¡æ¯...")
	if latestBlock, err := d.apiClient.GetLatestBlock(ctx); err == nil {
		d.logger.Infof("âœ… è·å–åˆ°æœ€æ–°åŒºå—: é«˜åº¦=%d", latestBlock.GetHeight())
		blockInfo = latestBlock
	} else {
		d.logger.Warnf("âŒ è·å–æœ€æ–°åŒºå—å¤±è´¥ï¼Œä½¿ç”¨é“¾ä¿¡æ¯ä½œä¸ºå¤‡ç”¨: %v", err)
		// å¤‡ç”¨æ–¹æ¡ˆï¼šä»é“¾æœåŠ¡è·å–åŸºæœ¬ä¿¡æ¯
		if chainInfo, chainErr := d.chainService.GetChainInfo(ctx); chainErr == nil {
			blockInfo = &client.BlockInfo{
				Block: &blockpb.Block{
					Header: &blockpb.BlockHeader{
						ChainId:   d.configProvider.GetBlockchain().ChainID, // ä½¿ç”¨é…ç½®çš„é“¾ID
						Version:   1,
						Height:    chainInfo.Height,
						Timestamp: uint64(chainInfo.LastBlockTime),
					},
					Body: &blockpb.BlockBody{
						Transactions: []*transaction.Transaction{}, // ç©ºäº¤æ˜“åˆ—è¡¨
					},
				},
			}
		} else {
			d.logger.Errorf("è·å–åŒºå—ä¿¡æ¯å¤±è´¥: API=%v, é“¾æœåŠ¡=%v", err, chainErr)
		}
	}
	progress.Increment()

	// å®ŒæˆåŠ è½½
	progress.UpdateTitle("åŠ è½½å®Œæˆ!")
	progress.Increment()

	time.Sleep(500 * time.Millisecond) // è®©ç”¨æˆ·çœ‹åˆ°å®ŒæˆçŠ¶æ€
	progress.Stop()

	// æ˜¾ç¤ºçŠ¶æ€æ¦‚è§ˆ
	d.showStatusOverview(nodeInfo, miningStatus, blockInfo)

	return nil
}

// showStatusOverview æ˜¾ç¤ºçŠ¶æ€æ¦‚è§ˆ
func (d *Dashboard) showStatusOverview(nodeInfo *client.NodeInfo, miningStatus *client.MiningStatus, blockInfo *client.BlockInfo) {
	pterm.Println() // ç©ºè¡Œ
	pterm.DefaultSection.Println("èŠ‚ç‚¹æ¦‚è§ˆ")

	// åˆ›å»ºçŠ¶æ€é¢æ¿
	var panels pterm.Panels

	// èŠ‚ç‚¹ä¿¡æ¯é¢æ¿
	if nodeInfo != nil {
		nodePanel := fmt.Sprintf(
			"ğŸŒ èŠ‚ç‚¹çŠ¶æ€: %s\n"+
				"ğŸ“Š åŒºå—é«˜åº¦: %s\n"+
				"ğŸ”— è¿æ¥èŠ‚ç‚¹: %s\n"+
				"â±ï¸ è¿è¡Œæ—¶é—´: %s\n"+
				"ğŸ“± ç‰ˆæœ¬: %s",
			pterm.Green("è¿è¡Œä¸­"),
			pterm.Yellow(fmt.Sprintf("%d", nodeInfo.BlockHeight)),
			pterm.Blue(fmt.Sprintf("%d", nodeInfo.PeerCount)),
			formatUptime(nodeInfo.Uptime),
			nodeInfo.Version,
		)
		panels = append(panels, []pterm.Panel{{Data: nodePanel}})
	}

	// æŒ–çŸ¿ä¿¡æ¯é¢æ¿
	if miningStatus != nil {
		miningPanel := fmt.Sprintf(
			"â›ï¸ æŒ–çŸ¿çŠ¶æ€: %s\n"+
				"ğŸ“ˆ ç®—åŠ›: %s\n"+
				"ğŸ† å·²æŒ–åŒºå—: %s\n"+
				"ğŸ¯ å½“å‰éš¾åº¦: %s\n"+
				"â° è¿è¡Œæ—¶é•¿: %s",
			getMiningStatusText(miningStatus.IsActive),
			pterm.Gray("N/A"),       // æ ¹æ®é¡¹ç›®çº¦æŸï¼Œä¸æ˜¾ç¤ºç®—åŠ›æŒ‡æ ‡
			pterm.Gray("N/A"),       // åŒæ ·ä¸æ˜¾ç¤ºæŒ–çŸ¿åŒºå—æ•°
			miningStatus.Difficulty, // æ˜¾ç¤ºå®Œæ•´éš¾åº¦å€¼
			formatUptime(miningStatus.Uptime),
		)
		panels = append(panels, []pterm.Panel{{Data: miningPanel}})
	}

	// åŒºå—ä¿¡æ¯é¢æ¿
	if blockInfo != nil {
		blockPanel := fmt.Sprintf(
			"ğŸ§± æœ€æ–°åŒºå—: %s\n"+
				"ğŸ“ åŒºå—é«˜åº¦: %s\n"+
				"ğŸ“ äº¤æ˜“æ•°é‡: %s\n"+
				"ğŸ‘¤ å‡ºå—è€…: %s\n"+
				"ğŸ• æ—¶é—´: %s",
			"N/A", // Hashéœ€è¦å•ç‹¬è®¡ç®— - æš‚ä¸å¯ç”¨
			pterm.Yellow(fmt.Sprintf("%d", blockInfo.GetHeight())),
			pterm.Blue(fmt.Sprintf("%d", blockInfo.GetTxCount())),
			"N/A", // Minerä¿¡æ¯ä¸åœ¨Blockç»“æ„ä¸­ - æš‚ä¸å¯ç”¨
			blockInfo.GetFormattedTime(),
		)
		panels = append(panels, []pterm.Panel{{Data: blockPanel}})
	}

	// æ˜¾ç¤ºé¢æ¿
	if len(panels) > 0 {
		pterm.DefaultPanel.WithPanels(panels).Render()
	}

	// æ˜¾ç¤ºåˆ†éš”çº¿
	pterm.Println()
	pterm.Println(strings.Repeat("â”€", 50))
}

// backgroundUpdate åå°æ›´æ–°ï¼ˆå¯é€‰åŠŸèƒ½ï¼‰
func (d *Dashboard) backgroundUpdate(ctx context.Context) {
	// è¿™é‡Œå¯ä»¥å®ç°åå°å®šæ—¶æ›´æ–°
	// æ¯”å¦‚æ¯30ç§’æ›´æ–°ä¸€æ¬¡çŠ¶æ€ä¿¡æ¯
	// ä½†è¦æ³¨æ„ä¸è¦å¹²æ‰°ç”¨æˆ·çš„äº¤äº’
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return
		case <-ticker.C:
			if !d.isRunning {
				return
			}
			// è¿™é‡Œå¯ä»¥æ·»åŠ åå°æ›´æ–°é€»è¾‘
			// ä½†éœ€è¦è°¨æ…å¤„ç†ï¼Œé¿å…å¹²æ‰°ç”¨æˆ·æ“ä½œ
		}
	}
}

// ShowLiveStatus æ˜¾ç¤ºå®æ—¶çŠ¶æ€ï¼ˆç”¨äºç›‘æ§æ¨¡å¼ï¼‰
func (d *Dashboard) ShowLiveStatus(ctx context.Context) error {
	pterm.Print("\033[2J\033[H")
	pterm.DefaultHeader.WithFullWidth().Println("å®æ—¶ç›‘æ§æ¨¡å¼ - æŒ‰ Ctrl+C é€€å‡º")

	// åˆ›å»ºå®æ—¶æ›´æ–°å™¨
	liveArea, _ := pterm.DefaultArea.WithFullscreen().Start()
	defer liveArea.Stop()

	ticker := time.NewTicker(2 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ctx.Done():
			return ctx.Err()
		case <-ticker.C:
			// è·å–æœ€æ–°çŠ¶æ€
			nodeInfo, _ := d.apiClient.GetNodeInfo(ctx)
			miningStatus, _ := d.apiClient.GetMiningStatus(ctx)
			blockInfo, _ := d.apiClient.GetLatestBlock(ctx)

			// æ„å»ºçŠ¶æ€æ˜¾ç¤ºå†…å®¹
			content := d.buildLiveStatusContent(nodeInfo, miningStatus, blockInfo)

			// æ›´æ–°æ˜¾ç¤º
			liveArea.Update(content)
		}
	}
}

// buildLiveStatusContent æ„å»ºå®æ—¶çŠ¶æ€å†…å®¹
func (d *Dashboard) buildLiveStatusContent(nodeInfo *client.NodeInfo, miningStatus *client.MiningStatus, blockInfo *client.BlockInfo) string {
	var content string

	// æ ‡é¢˜
	content += pterm.DefaultHeader.WithFullWidth().Sprint("ğŸš€ WES èŠ‚ç‚¹å®æ—¶ç›‘æ§")
	content += "\n\n"

	// æ—¶é—´æˆ³
	content += pterm.Gray(fmt.Sprintf("æ›´æ–°æ—¶é—´: %s", time.Now().Format("2006-01-02 15:04:05")))
	content += "\n\n"

	// èŠ‚ç‚¹çŠ¶æ€
	if nodeInfo != nil {
		content += pterm.DefaultSection.Sprint("èŠ‚ç‚¹çŠ¶æ€")
		content += fmt.Sprintf("åŒºå—é«˜åº¦: %s | è¿æ¥èŠ‚ç‚¹: %s | è¿è¡Œæ—¶é—´: %s\n",
			pterm.Yellow(fmt.Sprintf("%d", nodeInfo.BlockHeight)),
			pterm.Blue(fmt.Sprintf("%d", nodeInfo.PeerCount)),
			formatUptime(nodeInfo.Uptime),
		)
		content += "\n"
	}

	// æŒ–çŸ¿çŠ¶æ€
	if miningStatus != nil {
		content += pterm.DefaultSection.Sprint("æŒ–çŸ¿çŠ¶æ€")
		content += fmt.Sprintf("çŠ¶æ€: %s | ç®—åŠ›: %s | å·²æŒ–åŒºå—: %s\n",
			getMiningStatusText(miningStatus.IsActive),
			pterm.Gray("N/A"), // æ ¹æ®é¡¹ç›®çº¦æŸï¼Œä¸æ˜¾ç¤ºç®—åŠ›æŒ‡æ ‡
			pterm.Gray("N/A"), // åŒæ ·ä¸æ˜¾ç¤ºæŒ–çŸ¿åŒºå—æ•°
		)
		content += "\n"
	}

	// æœ€æ–°åŒºå—
	if blockInfo != nil {
		content += pterm.DefaultSection.Sprint("æœ€æ–°åŒºå—")
		content += fmt.Sprintf("é«˜åº¦: %s | å“ˆå¸Œ: %s | äº¤æ˜“: %s | æ—¶é—´: %s\n",
			pterm.Yellow(fmt.Sprintf("%d", blockInfo.GetHeight())),
			"N/A", // Hashéœ€è¦å•ç‹¬è®¡ç®— - æš‚ä¸å¯ç”¨
			pterm.Blue(fmt.Sprintf("%d", blockInfo.GetTxCount())),
			blockInfo.GetFormattedTime(),
		)
	}

	return content
}

// è¾…åŠ©å‡½æ•°

// formatUptime æ ¼å¼åŒ–è¿è¡Œæ—¶é—´
func formatUptime(seconds int64) string {
	if seconds < 60 {
		return fmt.Sprintf("%dç§’", seconds)
	} else if seconds < 3600 {
		return fmt.Sprintf("%dåˆ†", seconds/60)
	} else if seconds < 86400 {
		return fmt.Sprintf("%då°æ—¶", seconds/3600)
	} else {
		return fmt.Sprintf("%då¤©", seconds/86400)
	}
}

// getMiningStatusText è·å–æŒ–çŸ¿çŠ¶æ€æ–‡æœ¬
func getMiningStatusText(isActive bool) string {
	if isActive {
		return pterm.Green("ğŸŸ¢ è¿è¡Œä¸­")
	}
	return pterm.Red("ğŸ”´ å·²åœæ­¢")
}

// truncateHash æˆªæ–­å“ˆå¸Œæ˜¾ç¤º
func truncateHash(hash string, maxLen int) string {
	if len(hash) <= maxLen {
		return hash
	}
	return hash[:maxLen-3] + "..."
}
