package repository

import (
	"context"
	"fmt"
	"time"

	core "github.com/weisyn/v1/pb/blockchain/block"
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// ============================================================================
//                          ğŸ§ª ç”Ÿäº§éªŒè¯å’Œæµ‹è¯•
// ============================================================================

// ValidationSuite éªŒè¯æµ‹è¯•å¥—ä»¶
type ValidationSuite struct {
	manager *Manager
	logger  log.Logger
}

// NewValidationSuite åˆ›å»ºéªŒè¯æµ‹è¯•å¥—ä»¶
func NewValidationSuite(manager *Manager, logger log.Logger) *ValidationSuite {
	return &ValidationSuite{
		manager: manager,
		logger:  logger,
	}
}

// RunFullValidation è¿è¡Œå®Œæ•´éªŒè¯
func (vs *ValidationSuite) RunFullValidation(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Info("å¼€å§‹è¿è¡Œå®Œæ•´éªŒè¯æµ‹è¯•")
	}

	// 1. æ¶æ„è¾¹ç•ŒéªŒè¯
	if err := vs.validateArchitectureBoundaries(ctx); err != nil {
		return fmt.Errorf("æ¶æ„è¾¹ç•ŒéªŒè¯å¤±è´¥: %w", err)
	}

	// 2. å•ä¸€å…¥å£éªŒè¯
	if err := vs.validateSingleEntryPoint(ctx); err != nil {
		return fmt.Errorf("å•ä¸€å…¥å£éªŒè¯å¤±è´¥: %w", err)
	}

	// 3. äº‹åŠ¡åŸå­æ€§éªŒè¯
	if err := vs.validateTransactionAtomicity(ctx); err != nil {
		return fmt.Errorf("äº‹åŠ¡åŸå­æ€§éªŒè¯å¤±è´¥: %w", err)
	}

	// 4. Outboxæœºåˆ¶éªŒè¯
	if err := vs.validateOutboxMechanism(ctx); err != nil {
		return fmt.Errorf("Outboxæœºåˆ¶éªŒè¯å¤±è´¥: %w", err)
	}

	// 5. æ€§èƒ½æŒ‡æ ‡éªŒè¯
	if err := vs.validatePerformanceMetrics(ctx); err != nil {
		return fmt.Errorf("æ€§èƒ½æŒ‡æ ‡éªŒè¯å¤±è´¥: %w", err)
	}

	if vs.logger != nil {
		vs.logger.Info("å®Œæ•´éªŒè¯æµ‹è¯•é€šè¿‡")
	}

	return nil
}

// validateArchitectureBoundaries éªŒè¯æ¶æ„è¾¹ç•Œ
func (vs *ValidationSuite) validateArchitectureBoundaries(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Debug("éªŒè¯æ¶æ„è¾¹ç•Œ")
	}

	// éªŒè¯Manageråªæœ‰ä¸€ä¸ªå†™å…¥æ–¹æ³•
	// è¿™é‡Œé€šè¿‡åå°„æˆ–ä»£ç å®¡è®¡æ¥éªŒè¯
	// ç®€åŒ–å®ç°ï¼šæ£€æŸ¥å…³é”®ç»„ä»¶æ˜¯å¦æ­£ç¡®åˆå§‹åŒ–

	if vs.manager.blockStorage == nil {
		return fmt.Errorf("BlockStorageæœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.chainState == nil {
		return fmt.Errorf("ChainStateæœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.indexManager == nil {
		return fmt.Errorf("IndexManageræœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.txService == nil {
		return fmt.Errorf("TransactionServiceæœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.resService == nil {
		return fmt.Errorf("ResourceServiceæœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.utxoClient == nil {
		return fmt.Errorf("UTXOServiceæœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.outboxManager == nil {
		return fmt.Errorf("OutboxManageræœªæ­£ç¡®åˆå§‹åŒ–")
	}
	if vs.manager.performanceMonitor == nil {
		return fmt.Errorf("PerformanceMonitoræœªæ­£ç¡®åˆå§‹åŒ–")
	}

	return nil
}

// validateSingleEntryPoint éªŒè¯å•ä¸€å…¥å£ç‚¹
func (vs *ValidationSuite) validateSingleEntryPoint(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Debug("éªŒè¯å•ä¸€å…¥å£ç‚¹")
	}

	// éªŒè¯åªæœ‰Manager.StoreBlockæ˜¯å†™å…¥å…¥å£
	// è¿™é‡Œé€šè¿‡æ£€æŸ¥æ˜¯å¦æœ‰å…¶ä»–å†™å…¥æ–¹æ³•è¢«æ„å¤–æš´éœ²

	// ç®€åŒ–å®ç°ï¼šéªŒè¯å…³é”®å†™å…¥è·¯å¾„çš„å®Œæ•´æ€§
	// å®é™…ç”Ÿäº§ä¸­ï¼Œè¿™é‡Œåº”è¯¥æœ‰æ›´è¯¦ç»†çš„APIè¾¹ç•Œæ£€æŸ¥

	return nil
}

// validateTransactionAtomicity éªŒè¯äº‹åŠ¡åŸå­æ€§
func (vs *ValidationSuite) validateTransactionAtomicity(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Debug("éªŒè¯äº‹åŠ¡åŸå­æ€§")
	}

	// åˆ›å»ºä¸€ä¸ªæµ‹è¯•åŒºå—
	testBlock := vs.createTestBlock()

	// å°è¯•å­˜å‚¨åŒºå—
	if err := vs.manager.StoreBlock(ctx, testBlock); err != nil {
		return fmt.Errorf("å­˜å‚¨æµ‹è¯•åŒºå—å¤±è´¥: %w", err)
	}

	// éªŒè¯æ‰€æœ‰ç›¸å…³æ•°æ®éƒ½å·²æ­£ç¡®å­˜å‚¨
	// 1. éªŒè¯åŒºå—æ•°æ®
	retrievedBlock, err := vs.manager.GetBlock(ctx, vs.computeTestBlockHash(testBlock))
	if err != nil {
		return fmt.Errorf("è·å–å­˜å‚¨çš„åŒºå—å¤±è´¥: %w", err)
	}
	if retrievedBlock.Header.Height != testBlock.Header.Height {
		return fmt.Errorf("åŒºå—é«˜åº¦ä¸åŒ¹é…")
	}

	// 2. éªŒè¯é“¾çŠ¶æ€æ›´æ–°
	chainState, err := vs.manager.GetChainState(ctx)
	if err != nil {
		return fmt.Errorf("è·å–é“¾çŠ¶æ€å¤±è´¥: %w", err)
	}
	if chainState.HighestHeight < testBlock.Header.Height {
		return fmt.Errorf("é“¾çŠ¶æ€æœªæ­£ç¡®æ›´æ–°")
	}

	// 3. éªŒè¯outboxäº‹ä»¶åˆ›å»º
	events, err := vs.manager.outboxManager.GetPendingEvents(ctx)
	if err != nil {
		return fmt.Errorf("è·å–outboxäº‹ä»¶å¤±è´¥: %w", err)
	}
	if len(events) == 0 {
		return fmt.Errorf("outboxäº‹ä»¶æœªåˆ›å»º")
	}

	return nil
}

// validateOutboxMechanism éªŒè¯Outboxæœºåˆ¶
func (vs *ValidationSuite) validateOutboxMechanism(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Debug("éªŒè¯Outboxæœºåˆ¶")
	}

	// è§¦å‘outboxäº‹ä»¶å¤„ç†
	vs.manager.processOutboxEvents(ctx)

	// ç­‰å¾…ä¸€æ®µæ—¶é—´è®©å¼‚æ­¥å¤„ç†å®Œæˆ
	time.Sleep(time.Millisecond * 100)

	// æ£€æŸ¥äº‹ä»¶æ˜¯å¦è¢«å¤„ç†
	events, err := vs.manager.outboxManager.GetPendingEvents(ctx)
	if err != nil {
		return fmt.Errorf("è·å–å¾…å¤„ç†äº‹ä»¶å¤±è´¥: %w", err)
	}

	// å¦‚æœè¿˜æœ‰å¾…å¤„ç†äº‹ä»¶ï¼Œå¯èƒ½æ˜¯æ­£å¸¸çš„ï¼ˆå–å†³äºUTXOç³»ç»ŸçŠ¶æ€ï¼‰
	if vs.logger != nil && len(events) > 0 {
		vs.logger.Debugf("ä»æœ‰ %d ä¸ªå¾…å¤„ç†çš„outboxäº‹ä»¶", len(events))
	}

	return nil
}

// validatePerformanceMetrics éªŒè¯æ€§èƒ½æŒ‡æ ‡
func (vs *ValidationSuite) validatePerformanceMetrics(ctx context.Context) error {
	if vs.logger != nil {
		vs.logger.Debug("éªŒè¯æ€§èƒ½æŒ‡æ ‡")
	}

	// è·å–æ€§èƒ½æŒ‡æ ‡
	metrics := vs.manager.GetPerformanceMetrics()
	if metrics == nil {
		return fmt.Errorf("æ€§èƒ½æŒ‡æ ‡ä¸ºç©º")
	}

	// éªŒè¯æŒ‡æ ‡çš„åˆç†æ€§
	if metrics.BlockProcessingTime < 0 {
		return fmt.Errorf("åŒºå—å¤„ç†æ—¶é—´å¼‚å¸¸: %v", metrics.BlockProcessingTime)
	}

	if vs.logger != nil {
		vs.logger.Debugf("æ€§èƒ½æŒ‡æ ‡éªŒè¯é€šè¿‡ - å¹³å‡å¤„ç†æ—¶é—´: %v, å¹³å‡äº¤æ˜“æ•°: %d",
			metrics.BlockProcessingTime, metrics.TransactionCount)
	}

	return nil
}

// createTestBlock åˆ›å»ºæµ‹è¯•åŒºå—
func (vs *ValidationSuite) createTestBlock() *core.Block {
	now := uint64(time.Now().Unix())

	return &core.Block{
		Header: &core.BlockHeader{
			Version:      1,
			Height:       1000000, // ä½¿ç”¨é«˜çš„æµ‹è¯•é«˜åº¦é¿å…å†²çª
			Timestamp:    now,
			PreviousHash: make([]byte, 32), // ç©ºçš„å‰ä¸€ä¸ªå“ˆå¸Œ
			MerkleRoot:   make([]byte, 32), // ç©ºçš„Merkleæ ¹
			Nonce:        []byte{1, 2, 3, 4},
			Difficulty:   1,
		},
		Body: &core.BlockBody{
			Transactions: []*transaction.Transaction{
				{
					Version:           1,
					Inputs:            []*transaction.TxInput{},
					Outputs:           []*transaction.TxOutput{},
					Nonce:             12345,
					CreationTimestamp: now,
				},
			},
		},
	}
}

// computeTestBlockHash è®¡ç®—æµ‹è¯•åŒºå—å“ˆå¸Œï¼ˆç®€åŒ–å®ç°ï¼‰
func (vs *ValidationSuite) computeTestBlockHash(block *core.Block) []byte {
	// ç®€åŒ–å®ç°ï¼šä½¿ç”¨åŒºå—é«˜åº¦å’Œæ—¶é—´æˆ³ç”Ÿæˆä¼ªå“ˆå¸Œ
	hash := make([]byte, 32)
	height := block.Header.Height
	timestamp := block.Header.Timestamp

	// å°†é«˜åº¦å’Œæ—¶é—´æˆ³ç¼–ç åˆ°å“ˆå¸Œä¸­
	for i := 0; i < 8 && i < len(hash); i++ {
		hash[i] = byte(height >> (i * 8))
	}
	for i := 8; i < 16 && i < len(hash); i++ {
		hash[i] = byte(timestamp >> ((i - 8) * 8))
	}

	return hash
}
