package client

import (
	"encoding/json"
	"fmt"
	"time"

	// å¯¼å…¥protobufç»“æ„
	blockpb "github.com/weisyn/v1/pb/blockchain/block"
)

// APIResponse APIå“åº”çš„é€šç”¨ç»“æ„
type APIResponse struct {
	Success bool            `json:"success"`
	Data    json.RawMessage `json:"data,omitempty"`
	Message string          `json:"message,omitempty"`
	Error   APIError        `json:"error,omitempty"`
}

// APIError APIé”™è¯¯ä¿¡æ¯
type APIError struct {
	Code    string `json:"code,omitempty"`
	Message string `json:"message,omitempty"`
	Details string `json:"details,omitempty"`
}

// BalanceInfo è´¦æˆ·ä½™é¢ä¿¡æ¯
type BalanceInfo struct {
	Address struct {
		RawHash string `json:"raw_hash"` // base64ç¼–ç çš„åœ°å€å“ˆå¸Œ
	} `json:"address"`
	TokenID      interface{} `json:"token_id"` // å¯èƒ½ä¸ºnull
	Available    uint64      `json:"available"`
	Locked       uint64      `json:"locked"`
	Pending      uint64      `json:"pending"`
	Total        uint64      `json:"total"`
	UTXOCount    int         `json:"utxo_count"`
	LastUpdated  string      `json:"last_updated"` // æ—¶é—´å­—ç¬¦ä¸²æ ¼å¼
	UpdateHeight uint64      `json:"update_height"`
}

// GetAddressString è·å–åœ°å€çš„å­—ç¬¦ä¸²è¡¨ç¤ºï¼ˆç®€åŒ–å¤„ç†ï¼‰
func (b *BalanceInfo) GetAddressString() string {
	if b.Address.RawHash == "" {
		return "unknown"
	}
	// è¿™é‡Œåº”è¯¥å®ç°Base64åˆ°Base58çš„è½¬æ¢ï¼Œä½†ä¸ºäº†ç®€åŒ–ï¼Œæˆ‘ä»¬ç›´æ¥æ˜¾ç¤ºå‰å‡ ä¸ªå­—ç¬¦
	if len(b.Address.RawHash) > 8 {
		return b.Address.RawHash[:8] + "..."
	}
	return b.Address.RawHash
}

// ToFloat64 å°†ä½™é¢è½¬æ¢ä¸ºæµ®ç‚¹æ•°æ˜¾ç¤ºï¼ˆä½¿ç”¨ç³»ç»Ÿçš„8ä½å°æ•°ç²¾åº¦ï¼‰
func (b *BalanceInfo) ToFloat64() float64 {
	// ä½¿ç”¨ç³»ç»Ÿæ­£ç¡®çš„ç²¾åº¦ï¼š1 WES = 100,000,000 wei (1e8)
	return float64(b.Available) / 1e8
}

// NodeInfo èŠ‚ç‚¹ä¿¡æ¯
type NodeInfo struct {
	NodeID             string   `json:"node_id"`
	Success            bool     `json:"success"`
	Addresses          []string `json:"addresses"`
	ActualListenAddrs  []string `json:"actual_listen_addrs"`
	ActualListenCount  int      `json:"actual_listen_count"`
	AddressCount       int      `json:"address_count"`
	ProtocolCount      int      `json:"protocol_count"`
	SupportedProtocols []string `json:"supported_protocols"`
	Note               string   `json:"note"`

	// å…¼å®¹æ€§å­—æ®µ - ä»å…¶ä»–å­—æ®µè®¡ç®—å¾—å‡º
	Version     string    `json:"-"`
	Uptime      int64     `json:"-"`
	BlockHeight uint64    `json:"-"`
	PeerCount   int       `json:"-"` // ä½¿ç”¨AddressCountä½œä¸ºPeerCountçš„è¿‘ä¼¼å€¼
	IsMining    bool      `json:"-"`
	LastSyncAt  time.Time `json:"-"`
}

// GetPeerCount è·å–è¿æ¥çš„èŠ‚ç‚¹æ•°é‡ï¼ˆä½¿ç”¨AddressCountä½œä¸ºè¿‘ä¼¼å€¼ï¼‰
func (n *NodeInfo) GetPeerCount() int {
	return n.AddressCount
}

// BlockInfo åŒºå—ä¿¡æ¯ - åŸºäºprotobufç»“æ„
type BlockInfo struct {
	// ä½¿ç”¨protobuf Blockç»“æ„
	*blockpb.Block
}

// NewBlockInfoFromProto ä»protobuf Blockåˆ›å»ºBlockInfo
func NewBlockInfoFromProto(block *blockpb.Block) *BlockInfo {
	return &BlockInfo{Block: block}
}

// GetHeight è·å–åŒºå—é«˜åº¦
func (b *BlockInfo) GetHeight() uint64 {
	if b.Header != nil {
		return b.Header.Height
	}
	return 0
}

// GetChainID è·å–é“¾ID
func (b *BlockInfo) GetChainID() uint64 {
	if b.Header != nil {
		return b.Header.ChainId
	}
	return 0
}

// GetVersion è·å–ç‰ˆæœ¬
func (b *BlockInfo) GetVersion() uint64 {
	if b.Header != nil {
		return b.Header.Version
	}
	return 0
}

// GetPreviousHash è·å–å‰ä¸€åŒºå—å“ˆå¸Œï¼ˆåå…­è¿›åˆ¶å­—ç¬¦ä¸²ï¼‰
func (b *BlockInfo) GetPreviousHashHex() string {
	if b.Header != nil && len(b.Header.PreviousHash) > 0 {
		return fmt.Sprintf("%x", b.Header.PreviousHash)
	}
	return ""
}

// GetMerkleRoot è·å–Merkleæ ¹ï¼ˆåå…­è¿›åˆ¶å­—ç¬¦ä¸²ï¼‰
func (b *BlockInfo) GetMerkleRootHex() string {
	if b.Header != nil && len(b.Header.MerkleRoot) > 0 {
		return fmt.Sprintf("%x", b.Header.MerkleRoot)
	}
	return ""
}

// GetNonce è·å–éšæœºæ•°ï¼ˆåå…­è¿›åˆ¶å­—ç¬¦ä¸²ï¼‰
func (b *BlockInfo) GetNonceHex() string {
	if b.Header != nil && len(b.Header.Nonce) > 0 {
		return fmt.Sprintf("%x", b.Header.Nonce)
	}
	return ""
}

// GetDifficulty è·å–éš¾åº¦
func (b *BlockInfo) GetDifficulty() uint64 {
	if b.Header != nil {
		return b.Header.Difficulty
	}
	return 0
}

// GetTimestamp è·å–æ—¶é—´æˆ³
func (b *BlockInfo) GetTimestamp() uint64 {
	if b.Header != nil {
		return b.Header.Timestamp
	}
	return 0
}

// GetTxCount è·å–äº¤æ˜“æ•°é‡
func (b *BlockInfo) GetTxCount() int {
	if b.Body != nil && b.Body.Transactions != nil {
		return len(b.Body.Transactions)
	}
	return 0
}

// GetFormattedTime è·å–æ ¼å¼åŒ–çš„æ—¶é—´
func (b *BlockInfo) GetFormattedTime() string {
	if b.Header != nil {
		return time.Unix(int64(b.Header.Timestamp), 0).Format("2006-01-02 15:04:05")
	}
	return ""
}

// MiningStatus æŒ–çŸ¿çŠ¶æ€
type MiningStatus struct {
	CurrentHeight *uint64    `json:"current_height"`
	IsMining      bool       `json:"is_mining"`
	MinerAddress  string     `json:"miner_address"`
	StartTime     *time.Time `json:"start_time"`

	// å…¼å®¹æ€§å­—æ®µ - ä»å…¶ä»–å­—æ®µè®¡ç®—å¾—å‡º
	IsActive    bool    `json:"-"` // ä½¿ç”¨IsMining
	HashRate    float64 `json:"-"`
	BlocksMined int64   `json:"-"`
	Difficulty  string  `json:"-"`
	TargetTime  int     `json:"-"`
	LastBlock   string  `json:"-"`
	Uptime      int64   `json:"-"`
}

// GetIsActive è·å–æŒ–çŸ¿æ´»è·ƒçŠ¶æ€
func (m *MiningStatus) GetIsActive() bool {
	return m.IsMining
}

// GetHashRateFormatted è·å–æ ¼å¼åŒ–çš„å“ˆå¸Œç‡
func (m *MiningStatus) GetHashRateFormatted() string {
	if m.HashRate >= 1e9 {
		return fmt.Sprintf("%.2f GH/s", m.HashRate/1e9)
	} else if m.HashRate >= 1e6 {
		return fmt.Sprintf("%.2f MH/s", m.HashRate/1e6)
	} else if m.HashRate >= 1e3 {
		return fmt.Sprintf("%.2f KH/s", m.HashRate/1e3)
	}
	return fmt.Sprintf("%.2f H/s", m.HashRate)
}

// PeerInfo å¯¹ç­‰èŠ‚ç‚¹ä¿¡æ¯
type PeerInfo struct {
	ID        string    `json:"id"`
	Address   string    `json:"address"`
	Direction string    `json:"direction"` // inbound/outbound
	Protocol  string    `json:"protocol"`
	Latency   int64     `json:"latency"` // æ¯«ç§’
	LastSeen  time.Time `json:"last_seen"`
}

// GetLatencyFormatted è·å–æ ¼å¼åŒ–çš„å»¶è¿Ÿ
func (p *PeerInfo) GetLatencyFormatted() string {
	return fmt.Sprintf("%d ms", p.Latency)
}

// TransferRequest è½¬è´¦è¯·æ±‚
type TransferRequest struct {
	FromAddress string `json:"from_address"`
	ToAddress   string `json:"to_address"`
	Amount      string `json:"amount"`
	TokenID     string `json:"token_id,omitempty"`
	FeeAmount   string `json:"fee_amount"`
	Memo        string `json:"memo,omitempty"`
	// ğŸ” å…³é”®ä¿®å¤ï¼šæ·»åŠ ç§é’¥å­—æ®µç”¨äºåŒºå—é“¾äº¤æ˜“ç­¾å
	SenderPrivateKey string `json:"sender_private_key"` // å‘é€æ–¹ç§é’¥ï¼ˆç”¨äºç­¾åï¼‰
}

// TransferResponse è½¬è´¦å“åº”
type TransferResponse struct {
	TransactionHash string `json:"transaction_hash"`
	Message         string `json:"message"`
}

// TransactionInfo äº¤æ˜“ä¿¡æ¯
type TransactionInfo struct {
	Hash        string    `json:"hash"`
	BlockHash   string    `json:"block_hash"`
	BlockHeight uint64    `json:"block_height"`
	From        string    `json:"from"`
	To          string    `json:"to"`
	Amount      uint64    `json:"amount"`
	Fee         uint64    `json:"fee"`
	Status      string    `json:"status"`
	Timestamp   int64     `json:"timestamp"`
	CreatedAt   time.Time `json:"created_at"`
}

// GetAmountFormatted è·å–æ ¼å¼åŒ–çš„é‡‘é¢
func (t *TransactionInfo) GetAmountFormatted() string {
	// ä½¿ç”¨ç³»ç»Ÿæ­£ç¡®çš„ç²¾åº¦ï¼š1 WES = 100,000,000 wei (1e8)
	return fmt.Sprintf("%.8f WES", float64(t.Amount)/1e8)
}

// GetFeeFormatted è·å–æ ¼å¼åŒ–çš„æ‰‹ç»­è´¹
func (t *TransactionInfo) GetFeeFormatted() string {
	// ä½¿ç”¨ç³»ç»Ÿæ­£ç¡®çš„ç²¾åº¦ï¼š1 WES = 100,000,000 wei (1e8)
	return fmt.Sprintf("%.8f WES", float64(t.Fee)/1e8)
}

// GetFormattedTime è·å–æ ¼å¼åŒ–çš„æ—¶é—´
func (t *TransactionInfo) GetFormattedTime() string {
	return time.Unix(t.Timestamp, 0).Format("2006-01-02 15:04:05")
}
